Fix root layer scrolls crash in viewport registration

Bug: 800566
Change-Id: Ibbaa77b7f40794f16cecdaec46353dd00bc277e9