third_party/WebKit/Source/core/page/scrolling/TopDocumentRootScrollerController.h
@@ -13,6 +13,7 @@
 namespace blink {
 
 class Element;
+class LocalFrameView;
 class Page;
 class GraphicsLayer;
 class PaintLayer;
@@ -36,7 +37,7 @@ class CORE_EXPORT TopDocumentRootScrollerController
 
   // This class needs to be informed of changes to compositing so that it can
   // update the compositor when the effective root scroller changes.
-  void DidUpdateCompositing();
+  void DidUpdateCompositing(const LocalFrameView&);
 
   // PaintLayerScrollableAreas need to notify this class when they're being
   // disposed so that we can remove them as the root scroller.
